--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<link rel="stylesheet" type="text/css" href="style.css">
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -7,6 +8,7 @@
   <link rel="stylesheet" href="styles.css"> <!-- Optional for styling -->
 </head>
 <body>
+  <h1>CALCULATOR 2.0</h1>
   <div class="calculator">
     <input type="text" id="result" readonly> <!-- Display result here -->
     <div class="buttons">
