--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<link rel="stylesheet" type="text/css" href="style.css">
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -8,28 +7,29 @@
   <link rel="stylesheet" href="styles.css"> <!-- Optional for styling -->
 </head>
 <body>
-  <h1>CALCULATOR 2.0</h1>
+  <h1>Calculator 2.0</h1>
   <div class="calculator">
     <input type="text" id="result" readonly> <!-- Display result here -->
     <div class="buttons">
       <!-- Buttons for numbers and operations -->
-      <button onclick="appendNumber('0')">0</button>
-      <button onclick="appendNumber('1')">1</button>
-      <button onclick="appendNumber('2')">2</button>
-      <button onclick="appendNumber('3')">3</button>
-      <button onclick="appendNumber('4')">4</button>
-      <button onclick="appendNumber('5')">5</button>
-      <button onclick="appendNumber('6')">6</button>
-      <button onclick="appendNumber('7')">7</button>
-      <button onclick="appendNumber('8')">8</button>
-      <button onclick="appendNumber('9')">9</button>
-      <button onclick="appendOperator('+')">+</button>
-      <button onclick="appendOperator('-')">+</button>
-      <button onclick="appendOperator('*')">*</button>
-      <button onclick="appendOperator('/')">/</button>
+      <button onclick="appendToResult('0')">0</button>
+      <button onclick="appendToResult('1')">1</button>
+      <button onclick="appendToResult('2')">2</button>
+      <button onclick="appendToResult('3')">3</button>
+      <button onclick="appendToResult('4')">4</button>
+      <button onclick="appendToResult('5')">5</button>
+      <button onclick="appendToResult('6')">6</button>
+      <button onclick="appendToResult('7')">7</button>
+      <button onclick="appendToResult('8')">8</button>
+      <button onclick="appendToResult('9')">9</button>
+      <button onclick="appendToResult('+')">+</button>
+      <button onclick="appendToResult('-')">-</button>
+      <button onclick="appendToResult('*')">*</button>
+      <button onclick="appendToResult('/')">/</button>
       <button onclick="clearResult()">C</button>
-      <button onclick="calculate()">=</button>
+      <button onclick="calculateResult()">=</button>
     </div>
   </div>
+  <script src="script.js"></script> <!-- Link to JavaScript file -->
 </body>
 </html>
