--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
 <!DOCTYPE html>
 </html>
-<button onclick="location.href='index.html'" class="button">LEVEL 1</button>
+<button onclick="location.href='level 1.html'" class="button">EASY</button>
+</html>
+<body>
+    <h1>WELCOME TO SNAKE 2.0.</h1>
+    <p>CHOOSE THE DIFFICULTY LEVEL THEN PLAY.</p>
+    <P>EAT THE GREEN PELLETS FOR POINTS</P>
+    <p>HARDER LEVELS WILL HAVE RED PELLETS FOR NEGATIVE POINTS</p>
+</body>
