--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+
+<link rel="stylesheet" type="text/css" href="style.css">
+
 </html>
 <button onclick="location.href='level 1.html'" class="button">EASY</button>
 </html>
