--- a/level 1 - pink.html
+++ b/level 1 - pink.html
@@ -44,7 +44,7 @@
         }
 
         .apple {
-            background-color: red;
+            background-color: rgb(0, 255, 0);
         }
 
         .score {
@@ -69,7 +69,7 @@
         const rows = 20; <!--game area length-->
         const cols = 20; <!--game area width-->
         let snake = [{ x: 10, y: 10 }]; <!--starting position of the snake-->
-        let direction = { x: 5, y: 0 }; 
+        let direction = { x: 1, y: 0 }; 
         let apple = { x: 15, y: 15 }; <!--first pos. of the apple-->
         let score = 0;
         let highScore = localStorage.getItem('highScore') || 0;
