--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 
 </html>
-<button onclick="location.href=''" class="button">EASY</button>
+<button onclick="location.href='easy.html'" class="button">EASY</button>
 </html>
 <body>
     <h1>WELCOME TO SNAKE 2.0.</h1>
