--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@
     <h1>WELCOME TO SNAKE 2.0.</h1>
     <p>CHOOSE THE DIFFICULTY LEVEL THEN PLAY.</p>
     <P>EAT THE GREEN PELLETS FOR POINTS</P>
-    <p>HARDER LEVELS WILL HAVE RED PELLETS FOR NEGATIVE POINTS</p>
+    <p>HARDER LEVELS WILL HAVE RED PELLETS FOR NEGATIVE POINTS!!!</p>
 </body>
