--- a/level1Pink.html
+++ b/level1Pink.html
@@ -14,7 +14,7 @@
             align-items: center;
             height: 100vh;
             margin: 0;
-            background-color: #ffacac;
+            background-color: #ffa5a5;
             color: rgb(167, 0, 95);
             font-family: Arial, sans-serif;
         }
@@ -24,13 +24,13 @@
             grid-template-columns: repeat(20, 20px);
             grid-template-rows: repeat(20, 20px);
             gap: 1px;
-            background-color: rgb(26, 1, 18);
+            background-color: rgb(81, 0, 55);
         }
 
         .cell {
             width: 20px;
             height: 20px;
-            background-color: rgb(26, 1, 18);
+            background-color: rgb(250, 250, 250);
         }
 
         .snake {
