--- a/easy.html
+++ b/easy.html
@@ -9,5 +9,5 @@
     <p>YOU HAVE CHOSEN THE EASY MODE</p>
     <P>EAT THE GREEN PELLETS FOR POINTS</P>
     <p>NOW CHOOSE A COLOUR</p>
-    <button onclick="location.href='level1Pink.html'" class="button">PINK</button>
+    <button onclick="location.href='level1Pink.html'" class="button">PINK!</button>
 </body>
