--- a/level1Blue.html
+++ b/level1Blue.html
@@ -14,8 +14,8 @@
             align-items: center;
             height: 100vh;
             margin: 0;
-            background-color: #ffa5a5;
-            color: rgb(167, 0, 95);
+            background-color: #b3e0fd;
+            color: rgb(0, 54, 109);
             font-family: Arial, sans-serif;
         }
 
@@ -34,11 +34,11 @@
         }
 
         .snake {
-            background-color: rgb(255, 0, 242);
+            background-color: rgb(17, 0, 255);
         }
 
         .snake-head {
-            background-color: rgb(255, 0, 242);
+            background-color: rgb(68, 0, 255);
             border-radius: 50%;
             position: relative;
         }
