--- a/easy.html
+++ b/easy.html
@@ -10,4 +10,5 @@
     <P>EAT THE GREEN PELLETS FOR POINTS</P>
     <p>NOW CHOOSE A COLOUR</p>
     <button onclick="location.href='level1Pink.html'" class="button">PINK!</button>
+    <button onclick="location.href='level1Blue.html" class="button">BLUE</button>
 </body>
