--- a/easy.html
+++ b/easy.html
@@ -7,8 +7,8 @@
 <body>
     <h1>WELCOME TO SNAKE 2.0.</h1>
     <p>YOU HAVE CHOSEN THE EASY MODE</p>
-    <P>EAT THE GREEN PELLETS FOR POINTS</P>
+    <P>EAT THE RED APPLES FOR POINTS</P>
     <p>NOW CHOOSE A COLOUR</p>
     <button onclick="location.href='level1Pink.html'" class="button">PINK!</button>
-    <button onclick="location.href='level1Blue.html" class="button">BLUE</button>
+    <button onclick="location.href='level1Blue.html'" class="button">BLUE!</button>
 </body>
