--- a/index.html
+++ b/index.html
@@ -10,4 +10,7 @@
     <p>CHOOSE THE DIFFICULTY LEVEL THEN PLAY.</p>
     <P>EAT THE GREEN PELLETS FOR POINTS</P>
     <p>HARDER LEVELS WILL HAVE RED PELLETS FOR NEGATIVE POINTS!!!</p>
+    <div style="border: 100px solid black;">
+    </div>
+
 </body>
