--- a/easy.html
+++ b/easy.html
@@ -11,4 +11,7 @@
     <p>NOW CHOOSE A COLOUR</p>
     <button onclick="location.href='level1Pink.html'" class="button">PINK!</button>
     <button onclick="location.href='level1Blue.html'" class="button">BLUE!</button>
+    <button onclick="location.href='level1Orange.html'" class="button">ORANGE!</button>
+
+
 </body>
