--- a/easy.html
+++ b/easy.html
@@ -12,6 +12,7 @@
     <button onclick="location.href='level1Pink.html'" class="button">PINK!</button>
     <button onclick="location.href='level1Blue.html'" class="button">BLUE!</button>
     <button onclick="location.href='level1Orange.html'" class="button">ORANGE!</button>
+    <button onclick="location.href='level1Yellow.html'" class="button">YELLOW!</button>
 
 
 </body>
