--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 
 <link rel="stylesheet" type="text/css" href="style.css">
 
-</html>
-<button onclick="location.href='easy.html'" class="button">EASY</button>
-</html>
 <body>
+    <body class="gradient-angle"></body>
     <h1>WELCOME TO SNAKE 2.0.</h1>
     <p>CHOOSE THE DIFFICULTY LEVEL THEN PLAY.</p>
     <P>EAT THE GREEN PELLETS FOR POINTS</P>
     <p>HARDER LEVELS WILL HAVE RED PELLETS FOR NEGATIVE POINTS!!!</p>
+
 </body>
+<html>
+    <button onclick="location.href='easy.html'" class="button">EASY</button>
+</html>
