--- a/easy.html
+++ b/easy.html
@@ -5,14 +5,12 @@
 </html>
 </html>
 <body>
-    <h1>WELCOME TO SNAKE 2.0.</h1>
-    <p>YOU HAVE CHOSEN THE EASY MODE</p>
+    <body class="gradient-angle"></body>
+    <h1><u><strong>YOU HAVE CHOSEN THE EASY MODE</strong></u></h1>
     <P>EAT THE GREEN APPLES FOR POINTS</P>
     <p>NOW CHOOSE A COLOUR</p>
     <button onclick="location.href='level1Pink.html'" class="button">PINK!</button>
     <button onclick="location.href='level1Blue.html'" class="button">BLUE!</button>
     <button onclick="location.href='level1Orange.html'" class="button">ORANGE!</button>
     <button onclick="location.href='level1Yellow.html'" class="button">YELLOW!</button>
-
-
 </body>
