--- a/index.html
+++ b/index.html
@@ -4,12 +4,9 @@
 
 <body>
     <body class="gradient-angle"></body>
-    <h1>WELCOME TO SNAKE 2.0.</h1>
+    <h1><u><strong>WELCOME TO SNAKE 2.0.</strong></u></h1>
     <p>CHOOSE THE DIFFICULTY LEVEL THEN PLAY.</p>
     <P>EAT THE GREEN PELLETS FOR POINTS</P>
     <p>HARDER LEVELS WILL HAVE RED PELLETS FOR NEGATIVE POINTS!!!</p>
-
-</body>
-<html>
     <button onclick="location.href='easy.html'" class="button">EASY</button>
-</html>
+</body>
