--- a/medium.html
+++ b/medium.html
@@ -6,11 +6,11 @@
 </html>
 <body>
     <body class="gradient-angle"></body>
-    <h1><u><strong>YOU HAVE CHOSEN THE EASY MODE</strong></u></h1>
-    <P>EAT THE GREEN APPLES FOR POINTS</P>
+    <h1><u><strong>YOU HAVE CHOSEN THE MEDIUM MODE</strong></u></h1>
+    <P>EAT THE GREEN APPLES FOR POINTS AND RED APPLES GIVE YOU NEGATIVE POINTS.</P>
     <p>NOW CHOOSE A COLOUR</p>
-    <button onclick="location.href='.html'" class="button">....</button>
-    <button onclick="location.href='.html'" class="button">....</button>
-    <button onclick="location.href='.html'" class="button">....</button>
-    <button onclick="location.href='.html'" class="button">....</button>
+    <button onclick="location.href='purple.html'" class="button">....</button>
+    <button onclick="location.href='beige.html'" class="button">....</button>
+    <button onclick="location.href='white.html'" class="button">....</button>
+    <button onclick="location.href='turquoise.html'" class="button">....</button>
 </body>
