--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <h1><u><strong>WELCOME TO SNAKE 2.0.</strong></u></h1>
     <p>CHOOSE THE DIFFICULTY LEVEL THEN PLAY.</p>
     <P>EAT THE GREEN PELLETS FOR POINTS</P>
-    <p>HARDER LEVELS WILL HAVE RED PELLETS FOR NEGATIVE POINTS!!!</p>
+    <p>MEDIUM LEVELS WILL HAVE RED PELLETS FOR NEGATIVE POINTS!!!</p>
+    <p>HARD LEVELS WILL HAVE OBSTACLES<p>
     <button onclick="location.href='easy.html'" class="button">EASY</button>
 </body>
