--- a/index.html
+++ b/index.html
@@ -10,4 +10,5 @@
     <p>MEDIUM LEVELS WILL HAVE RED PELLETS FOR NEGATIVE POINTS!!!</p>
     <p>HARD LEVELS WILL HAVE OBSTACLES<p>
     <button onclick="location.href='easy.html'" class="button">EASY</button>
+    <button onclick="location.href='medium.html'" class="button">MEDIUM</button>
 </body>
